# ai-hedge-fund

./: .env.example  .gitignore  LICENSE  README.md  data_optimization_readme.md  demo_data_loader.py  fix_imports.py  pyproject.toml  pyrightconfig.json  run_tests.py  setup.py  test_imports.py
docs/: architecture.md  quick-start.md
locales/: en.json  zh.json
src/: __init__.py  backtester.py  main.py  ollama_utils.py
src/agents/: __init__.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  michael_burry.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/crypto/: __init__.py  risk_manager.py
src/crypto/exchanges/: __init__.py  base.py  okx.py
src/crypto/strategies/: __init__.py  llm_strategy.py
src/data/: __init__.py  cache.py  data_loader.py  fetcher.py
src/graph/: __init__.py  workflow.py
src/llm/: __init__.py  models.py
src/models/: trader.py
src/tools/: api.py
src/utils/: __init__.py  analysts.py  api_client.py  data_loader.py  display.py  i18n.py  llm.py  logger.py  ollama.py  visualize.py
tests/: __init__.py  test_agents.py  test_data_loader.py  test_integration.py  test_logger.py  test_utils.py
