[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI Hedge Fund Team"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.0"
scikit-learn = "^1.1.0"
torch = "^1.12.0"
yfinance = "^0.1.87"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"