[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI Hedge Fund Team"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.0"
scikit-learn = "^1.1.0"
torch = "^1.12.0"
yfinance = "^0.1.87"
python-dotenv = "^0.21.0"
ccxt = "^4.0.0"
websockets = "^11.0.0"
aiohttp = "^3.8.0"
pydantic = "^2.0.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-core = ">=0.2.26,<0.3.0"
langchain-anthropic = "^0.1.23"
openai = "^1.0.0"
anthropic = ">=0.17.0,<1.0.0"
python-binance = "^1.0.19"
python-okx = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"